--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Пиздец!</title>
 	</head>
-	<body style="font-family: sans-serif; max-width: 600px; text-align: center; margin: 0 auto; padding: 5%">
+	<body style="font-size: 14px; line-height: 1em; max-width: 600px; text-align: center; margin: 0 auto; padding: 3%">
 		<img src="ugl.jpg" width="80%"/>
+		<p>«Филипп Романов из Углича рассматривает инфографику об Амурском тигре».</p>
+		<i>Айфон, камера. 2015, Иван Клименко.</i>
 	</body>
 </html>
