--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body style="font-size: 14px; line-height: 1em; max-width: 600px; text-align: center; margin: 0 auto; padding: 3%">
 		<img src="ugl.jpg" width="80%"/>
-		<p>«Филипп Романов из Углича рассматривает инфографику в Коворкафе».</p>
+		<p>«Филипп Романов из Углича рассматривает интерьеры Коворкафе».</p>
 		<i>Айфон, пиксели. 2015, Иван Клименко.</i>
 	</body>
 </html>
